--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,4 +1,4 @@
-.question {
+.questionWrapper {
   margin-top: 7rem;
   text-align: center;
   font-size: 2rem;
@@ -12,7 +12,7 @@
 }
 
 .input,
-[class$="-button"] {
+.aceptar-button {
   font-size: 1.6rem;
   padding: 1rem;
   margin-right: 1rem;
@@ -23,14 +23,23 @@
 }
 
 .aceptar-button {
+  border: none;
+  outline: none;
+  border-radius: 0.2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: #ffffff;
   background-color: green;
-  color: white;
-}
-.pasapalabra-button {
-  background-color: blue;
-  color: white;
-}
-.abandonar-button {
-  background-color: red;
-  color: white;
+  box-shadow: inset 0 -0.6em 1em -0.35em rgba(0, 0, 0, 0.17),
+    inset 0 0.6em 2em -0.3em rgba(255, 255, 255, 0.15),
+    inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
+  text-align: center;
+  position: relative;
+
+  &:active {
+    box-shadow: inset 0 0.6em 2em -0.3em rgba(0, 0, 0, 0.15),
+      inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
+  }
 }
