Added the triggerTheTimer function.

--- a/src/sass/_donut.scss
+++ b/src/sass/_donut.scss
@@ -4,6 +4,13 @@
   min-height: 100vh;
 }
 
+.timer {
+  text-align: center;
+  font-size: 3rem;
+  color: white;
+  margin-top: 3rem;
+}
+
 .donut {
   position: relative;
   display: flex;
