--- a/src/sass/_info.scss
+++ b/src/sass/_info.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
+  text-align: center;
 
   &__description {
     max-width: 80rem;
