--- a/src/sass/_ranking.scss
+++ b/src/sass/_ranking.scss
@@ -12,6 +12,7 @@ table {
   border-collapse: collapse;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 th,
@@ -28,6 +29,7 @@ th {
 thead {
   th {
     background-color: #55608f;
+    text-align: center;
   }
 }
 
