--- a/src/sass/_donut.scss
+++ b/src/sass/_donut.scss
@@ -1,10 +1,8 @@
 .donutWrapper {
-  //In js we go to make it display flex.
   display: none;
   flex-direction: column;
   align-items: center;
-  // background-color: hsl(219.7, 98.9%, 63.1%);
-  width: 100%;
+  max-width: 70%;
   min-height: 100vh;
 }
 
@@ -22,12 +20,12 @@
   width: 100%;
   height: 50vh;
   list-style: none;
-  margin: 70px auto;
+  margin: 45px auto;
 }
 
 .title {
   position: absolute;
-  top: 33vh;
+  top: 34vh;
   left: 31vw;
   color: white;
   text-transform: uppercase;
