--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,4 +1,5 @@
 .questionWrapper {
+  height: 8rem;
   text-align: center;
   font-size: 2rem;
   color: white;
@@ -11,7 +12,7 @@
 .form {
   display: flex;
   justify-content: center;
-  margin-top: 4rem;
+  // margin-top: 4rem;
 }
 
 .input,
